Fix CI build and tests
Money is no longer a ScalaNumber. Because of Eql[Number,Number].
Money[T] is invariant in T. So Monoid[Money[T]] is not helpfull if T is
a union type.
Minor change on docusaurus.config.js

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ scala:
  - 0.24.0-RC1
 
 script:
- - sbt clean coverage test
-after_success:
- - sbt coverageReport codacyCoverage
+ - sbt clean test
+# - sbt clean coverage test
+#after_success:
+# - sbt coverageReport codacyCoverage
