--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ scala:
  - 0.24.0-RC1
 
 script:
- - sbt clean test
-# - sbt clean coverage test
-#after_success:
-# - sbt coverageReport codacyCoverage
+ - sbt clean coverage test
+after_success:
+ - sbt coverageReport codacyCoverage
