--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,9 @@ stages:
 jobs:
  include:
   - stage: test
-    script: sbt clean compile test
+    script: sbt clean compile
+  - stage: test
+    script: sbt test
   - stage: reportCoverage
     script: sbt coverage test
     after_success: sbt coverageReport codacyCoverage
